--- a/Pantallas/old/f_Ventas_1.2.0..ui
+++ b/Pantallas/old/f_Ventas_1.2.0..ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>640</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>1000</width>
-    <height>640</height>
+    <height>600</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>1000</width>
-    <height>640</height>
+    <height>600</height>
    </size>
   </property>
   <property name="palette">
@@ -146,7 +146,7 @@
       <x>10</x>
       <y>61</y>
       <width>831</width>
-      <height>501</height>
+      <height>441</height>
      </rect>
     </property>
     <attribute name="horizontalHeaderVisible">
@@ -292,7 +292,7 @@
       <x>850</x>
       <y>60</y>
       <width>151</width>
-      <height>251</height>
+      <height>191</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -305,7 +305,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>60</y>
+       <y>10</y>
        <width>130</width>
        <height>30</height>
       </rect>
@@ -337,7 +337,7 @@ border-radius: 14px;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>110</y>
+       <y>50</y>
        <width>130</width>
        <height>30</height>
       </rect>
@@ -369,7 +369,7 @@ border-radius: 14px;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>160</y>
+       <y>100</y>
        <width>130</width>
        <height>30</height>
       </rect>
@@ -401,7 +401,7 @@ border-radius: 14px;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>210</y>
+       <y>150</y>
        <width>130</width>
        <height>30</height>
       </rect>
@@ -429,44 +429,12 @@ border-radius: 14px;</string>
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="b_Buscar">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>130</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Swis721 LtCn BT</family>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="focusPolicy">
-      <enum>Qt::StrongFocus</enum>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(240, 240, 240);
-border-width: 1px;
-border-style: solid;
-border-color: gray;
-border-radius: 14px;</string>
-     </property>
-     <property name="text">
-      <string>Buscar</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-    </widget>
    </widget>
    <widget class="QFrame" name="fr_botones">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>570</y>
+      <y>520</y>
       <width>831</width>
       <height>51</height>
      </rect>
@@ -642,7 +610,7 @@ border-radius: 14px;</string>
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>320</y>
+      <y>270</y>
       <width>151</width>
       <height>301</height>
      </rect>
@@ -903,7 +871,7 @@ border-radius: 14px;</string>
     <property name="geometry">
      <rect>
       <x>940</x>
-      <y>620</y>
+      <y>570</y>
       <width>50</width>
       <height>20</height>
      </rect>
@@ -915,7 +883,7 @@ border-radius: 14px;</string>
      </font>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; color:#aaaaaa;&quot;&gt;v 1.4.0&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; color:#aaaaaa;&quot;&gt;v 1.2.0&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -924,9 +892,9 @@ border-radius: 14px;</string>
    <widget class="QLabel" name="L3">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>10</y>
-      <width>50</width>
+      <x>850</x>
+      <y>0</y>
+      <width>70</width>
       <height>21</height>
      </rect>
     </property>
@@ -937,7 +905,7 @@ border-radius: 14px;</string>
      </font>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#aaaaaa;&quot;&gt;Usuario:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aaaaaa;&quot;&gt;Usuario:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -946,9 +914,9 @@ border-radius: 14px;</string>
    <widget class="QLabel" name="L4">
     <property name="geometry">
      <rect>
-      <x>840</x>
-      <y>30</y>
-      <width>50</width>
+      <x>850</x>
+      <y>20</y>
+      <width>70</width>
       <height>21</height>
      </rect>
     </property>
@@ -959,29 +927,7 @@ border-radius: 14px;</string>
      </font>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#aaaaaa;&quot;&gt;Nivel:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="L6">
-    <property name="geometry">
-     <rect>
-      <x>900</x>
-      <y>30</y>
-      <width>90</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Calibri</family>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#aaaaaa;&quot;&gt;N&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aaaaaa;&quot;&gt;Fecha:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -990,9 +936,9 @@ border-radius: 14px;</string>
    <widget class="QLabel" name="L5">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>10</y>
-      <width>90</width>
+      <x>850</x>
+      <y>40</y>
+      <width>70</width>
       <height>21</height>
      </rect>
     </property>
@@ -1003,7 +949,73 @@ border-radius: 14px;</string>
      </font>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; color:#aaaaaa;&quot;&gt;U&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aaaaaa;&quot;&gt;Hora:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="L7">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>20</y>
+      <width>70</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aaaaaa;&quot;&gt;F&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="L6">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>0</y>
+      <width>70</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aaaaaa;&quot;&gt;U&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="L8">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>40</y>
+      <width>70</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Calibri</family>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aaaaaa;&quot;&gt;H&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
