--- a/Pantallas/old/f_Login_1.3.0.ui
+++ b/Pantallas/old/f_Login_1.3.0.ui
@@ -170,9 +170,6 @@
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
     </property>
-    <property name="clearButtonEnabled">
-     <bool>true</bool>
-    </property>
    </widget>
    <widget class="QLabel" name="L2">
     <property name="geometry">
@@ -259,7 +256,7 @@
      </font>
     </property>
     <property name="text">
-     <string>DanStore</string>
+     <string>Dan1</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -323,9 +320,6 @@
     <property name="maxLength">
      <number>10</number>
     </property>
-    <property name="clearButtonEnabled">
-     <bool>true</bool>
-    </property>
    </widget>
    <widget class="QPushButton" name="b_Entrar">
     <property name="geometry">
@@ -387,7 +381,7 @@
      </font>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; color:#aaaaaa;&quot;&gt;v 1.4.0&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; color:#aaaaaa;&quot;&gt;v 1.3.0&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
